--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
       </div>
         </section>
     <section id="አበገደ_lists">
-          <h4>አበገደ Lists</h4>
+          <h4>Abegede (አበገደ) Lists</h4>
           <p>The አበገደ ordering of the Ethiopic syllabary is an alignment with the Coptic and Greek alphabets possibly to
         facilitate interdenominational communication or for the transfer of gematria practices.
         The ordering is used today largely for pedagogical purposes and has been used by some authors for the collation of
