--- a/index.html
+++ b/index.html
@@ -453,19 +453,19 @@
           <h4>Justification When ETHIOPIC WORDSPACE is the Word Delimiter</h4>
           <p>Since the arrival of the printing press in Ethiopia in 1863 (Pankhurst, 1998), full justification of Ethiopic has been a common typesetting practice in Ethiopian, and later Eritrean, publishing houses. Earlier, Ethiopic justification rules are a feature of Hiob Ludolf’s Historia Æthiopica which is noted as the first use of movable type for Ethiopic script (Ludolf, 1681). Prior to letterpress typography, calligraphic manuscripts rendered on parchment also featured full, or approximately full, justification. Though the latter likely reflects the scribe’s desire not to waste a millimeter of available lateral writing space.</p>
           <p>The placement of Ethiopic wordspace presents a complication to the justification of Ethiopic text. Two placement styles developed in typeset
-        literature which will be referred to here as “word bounded” and “centered” styles. Additionally, the word spacing following an Ethiopic fullstop
+        literature which will be referred to here as “word bound” and “centered” styles. Additionally, the word spacing following an Ethiopic fullstop
         may (or may not) be governed by a special rule and in combination with the two wordspace spacing styles. These spacing rules are discussed in the
         following sections.</p>
           <figure id="justification_in_historia_aethiopica"> <img src="images/justification_in_historia_aethiopica.png" alt=" " />
         <figcaption>Ethiopic Justification in <cite>Historia Æthiopica</cite> (Ludolf, 1681)</figcaption>
       </figure>
         </section>
-    <section id="justification_with_word_bounded_wordspace">
-          <h5>Justification with Word Bounded Wordspace and Punctuation</h5>
-          <p>In keeping with line justification for Latin script, the non-printed or “white space” between words is treated as stretchable. The width of the space symbol itself will be elongated to some aesthetic width value that may vary from space symbol to space symbol across a printed line. In Ethiopic justification, the white space between the Ethiopic word separator and the words it separates is likewise allowed to stretch. This stretching of white space may be either symmetrical (“centered”) or asymmetrical but in the latter case space stretching is always between the right side of the separator and the following word –referred to here as “word bounded”. </p>
-          <p>In  “word  bounded”  justification  the  word  separator,   which  may  be  either  a  punctuation  symbol  or <span class="uname">U+1361   ETHIOPIC WORDSPACE</span> [፡], appears to adhere to the word to the left as if it were its final character. Figures <a href="#justification_word_bounded"></a> and <a href="#justification_in_historia_aethiopica"></a> both illustrate the word bounded style.</p>
-          <figure id="justification_word_bounded"> <img src="images/corpus-samples/Ografi-Page-35-Cropped.png" alt=" " width="800" height="223" />
-        <figcaption>Ethiopic justification in word bounded style (Erikson, 1921 (1913 EC))</figcaption>
+    <section id="justification_with_word_bound_wordspace">
+          <h5>Justification with Word Bound Wordspace and Punctuation</h5>
+          <p>In keeping with line justification for Latin script, the non-printed or “white space” between words is treated as stretchable. The width of the space symbol itself will be elongated to some aesthetic width value that may vary from space symbol to space symbol across a printed line. In Ethiopic justification, the white space between the Ethiopic word separator and the words it separates is likewise allowed to stretch. This stretching of white space may be either symmetrical (“centered”) or asymmetrical but in the latter case space stretching is always between the right side of the separator and the following word –referred to here as “word bound”. </p>
+          <p>In  “word bound”  justification  the  word  separator,   which  may  be  either  a  punctuation  symbol  or <span class="uname">U+1361   ETHIOPIC WORDSPACE</span> [፡], appears to adhere to the word to the left as if it were its final character. Figures <a href="#justification_word_bound"></a> and <a href="#justification_in_historia_aethiopica"></a> both illustrate the word bound style.</p>
+          <figure id="justification_word_bound"> <img src="images/corpus-samples/Ografi-Page-35-Cropped.png" alt=" " width="800" height="223" />
+        <figcaption>Ethiopic justification in word bound style (Erikson, 1921 (1913 EC))</figcaption>
       </figure>
         </section>
     <section id="justification_with_centered_wordspace">
